--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.tenichi.test.MainActivity">
 
-    <TextView
+    <Button
         android:text="Hello World!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
